overflow added to result page, still need to find random bug that happens every so often and need to set a default size for the result boxes

--- a/docs/public/resultsPage/resultsPage.css
+++ b/docs/public/resultsPage/resultsPage.css
@@ -70,6 +70,8 @@
     width: 100%;
     opacity: 1;
     background-color: white;
+    overflow: scroll;
+    padding-bottom: 12px;
 }
 
 .basicContent {
